update formularios file

--- a/formularios.html
+++ b/formularios.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>Formulário</h1>
+        <h1>Formulários</h1>
         <hr><br>
 
         <form action="">
@@ -40,6 +40,45 @@
         <div>
             <label for="numeros">Números:</label>
             <input type="number" id="numeros" name="numeros">
+        </div>
+        
+        <div>
+            <label for="arquivos">Arquivos:</label>
+            <input type="file" id="arquivos" name="arquivos">
+        </div>
+
+        <div>
+            <label for="url">Url:</label>
+            <input type="url" id="url" name="url">
+        </div>
+
+        <div>
+            <label for="color">Cores:</label>
+            <input type="color" id="color" name="color">
+        </div>
+
+        <div>
+            <label for="range">Range:</label>
+            <input type="range" id="range" name="range">
+        </div>
+
+        <div>
+            <label for="checkbox">Check Box:</label>
+            <input type="checkbox" id="checkbox" name="checkbox">
+        </div>
+
+        <div>
+            <label for="radio">Check Radio:</label>
+            <input type="radio" id="radio" name="radio">
+        </div>
+
+        <div>
+            <label for="reset">Reset:</label>
+            <input type="reset" id="reset" name="reset" value="Limpar">
+        </div>
+
+        <div>
+            <input type="submit" id="submit" name="submit">
         </div>
 
         </form>
